--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 	<nav class="top-navigation">
-		<div class="content"></div>
+		<div class="content">
+			<img class="logo" src="img/karma-logo.svg" alt="Logo Image" width="26px" style="margin-left: 14px; height: 70px;">
+		</div>
 </body>
 </html>
