--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 	<meta charset="UTF-8">
 	<title><Document></Document></title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav class="top-navigation">
-		<div class="content">
-			<img class="logo" src="img/karma-logo.svg" alt="Logo Image" width="26px" style="margin-left: 14px; height: 70px;">
+		<div class="content">		
+		<ul class="links">
+			<li>Meet Karma</li>
+			<li>How It Works</li>
+			<li>Store</li>
+			<li>Blog</li>
+			<li>Help</li>
+			<li>Log In</li>
+		</ul>
+        <img class="logo" src="img/karma-logo.svg" alt="Logo Image" width="26px">
 		</div>
+	</nav>
 </body>
 </html>
