--- a/index.html
+++ b/index.html
@@ -3,22 +3,44 @@
 <head>
 	<meta charset="UTF-8">
 	<title><Document></Document></title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav class="top-navigation">
 		<div class="content">		
-		<ul class="links">
-			<li>Meet Karma</li>
-			<li>How It Works</li>
-			<li>Store</li>
-			<li>Blog</li>
-			<li>Help</li>
-			<li>Log In</li>
-		</ul>
-        <img class="logo" src="img/karma-logo.svg" alt="Logo Image" width="26px">
+            <ul class="links">
+                <li class="active">Meet Karma</li>
+                <li>How It Works</li>
+                <li>Store</li>
+                <li>Blog</li>
+                <li>Help</li>
+                <li>Log In</li>
+            </ul>
+            <img class="logo" src="img/karma-logo.svg" alt="Logo Image" width="26px">
 		</div>
 	</nav>
+    <section class="introduction">
+        <div class="intro-content">
+            <h1>Introducing Karma</h1>
+            <h3>Bring WiFi with you, everywhere you go.</h3>
+            <div class="buttons">
+                <div class="half learn">
+                    <button>Learn More</button>
+                </div>
+                <div class="half watch">
+                <span>
+                    <img src="img/play-icon.svg" width="35px" height="35px" alt="">
+                    Watch the video
+                </span>
+                </div>
+            <div class="bouncing-arrow">
+                <a href="#"></a>
+                    <img src="img/arrow-down.png" alt="Bouncing Arrow">
+                </a>
+            </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
