--- a/index.html
+++ b/index.html
@@ -42,5 +42,30 @@
             </div>
         </div>
     </section>
+    <section class="cases">
+        <div class="content">
+            <h2>Everyone needs a little Karma</h2>
+                <ul class="devices">
+                    <li><img width="127px" height="127px" src="img/icon-devices.svg" alt="">
+                        <div class="caption">
+                            <h3>Internet for all devices</h3>
+                            <p>Connect all your favorite devices to Karma</p>
+                        </div>
+                    </li>
+                    <li><img width="127px" height="127px" src="img/icon-coffee.svg" alt"">
+                    <div class="caption">
+                            <h3>Boost your productivity</h3>
+                            <p>Freedom of the internet wherever you are</p>
+                        </div>
+                    </li>
+                    <li><img width="127px" height="127px" src="img/icon-refill.svg" alt"">
+                        <div class="caption">
+                            <h3>Pay as You Go</h3>
+                            <p>Take full control of your spend. Pay for what you need.</p>
+                        </div>
+                    </li>
+                </ul>
+        </div>
+    </section>
 </body>
 </html>
